oriterm_core/tests/vttest/snapshots/vttest__menu6__120x40_06_sub2_01.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Test of LineFeed/NewLine mode.                                                                                          
                                                                                                                        
NewLine mode set. Push the RETURN key:
