oriterm_core/tests/vttest/snapshots/vttest__menu6__120x40_06_sub5_01.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Testing Secondary Device Attributes (Firmware version)                                                                  
                                                                                                                        
          <27> [ > 0 ; 2 0 0 ; 1 c                                                                                      
         Pp=0 (unknown)                                                                                                 
         Pv=200, firmware version 20.0                                                                                  
         Pc=1, ROM cartridge registration number ok                                                                     
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Push <RETURN>
