oriterm_core/tests/vttest/snapshots/vttest__menu6__120x40_06_sub6_01.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Testing Tertiary Device Attributes (unit ID)                                                                            
                                                                                                                        
          <27> P ! | 0 0 0 0 0 0 0 0 <27> \  ok                                                                         
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Push <RETURN>
